# rust_embeded

./: Cargo.toml  openocd.gdb
.cargo/: config
src/: main.rs
